--- a/docs/_data/sidebar/framework.yml
+++ b/docs/_data/sidebar/framework.yml
@@ -25,7 +25,7 @@ menus:
         link: /framework/coding/qentity
         mini: QET
         name: QEntity
-      - id: datasoruce
+      - id: datasource
         link: /framework/coding/datasource
         mini: DS
         name: DataSource
@@ -34,6 +34,10 @@ menus:
         mini: MPR
         name: Mapper
       - id: spring
-        link: /framework/coding/spring
         mini: SPR
         name: Spring
+        menus:
+          - id: factory
+            link: /framework/coding/spring/factory
+            mini: SFT
+            name: SpringFactory
