--- a/docs/_data/sidebar/spring.yml
+++ b/docs/_data/sidebar/spring.yml
@@ -6,6 +6,18 @@ menus:
     link: /spring
     icon: dashboard
     name: README
+  - id: context
+    icon: image
+    name: Context
+    menus:
+      - id: application-listener
+        name: Listener
+        mini: LS
+        menus:
+          - id: index
+            link: /spring/context/application-listener
+            name: README
+            mini: RD
   - id: aop
     icon: image
     name: AOP
