--- a/final-spring/final-spring-boot-starter/pom.xml
+++ b/final-spring/final-spring-boot-starter/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.finalframework</groupId>
-            <artifactId>final-spring-core</artifactId>
+            <artifactId>final-spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
