--- a/final-spring/final-spring-web/pom.xml
+++ b/final-spring/final-spring-web/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
-            <artifactId>final-spring-core</artifactId>
+            <artifactId>final-spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
