--- a/pom.xml
+++ b/pom.xml
@@ -244,7 +244,7 @@
             </dependency>
             <dependency>
                 <groupId>org.finalframework</groupId>
-                <artifactId>final-spring-core</artifactId>
+                <artifactId>final-spring-context</artifactId>
                 <version>${final.version}</version>
             </dependency>
             <dependency>
