--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -27,7 +27,7 @@ group :jekyll_plugins do
   gem 'jekyll-github-metadata'
   gem 'jekyll-optional-front-matter'
   gem 'jekyll-paginate'
-#  gem 'jekyll-readme-index', '~> 0.2.0'
+  gem 'jekyll-readme-index'
   gem 'jekyll-titles-from-headings'
   gem 'jekyll-relative-links'
 end
