--- a/final-data/final-data-spring-boot-starter/pom.xml
+++ b/final-data/final-data-spring-boot-starter/pom.xml
@@ -5,13 +5,18 @@
     <parent>
         <artifactId>final-data</artifactId>
         <groupId>org.finalframework</groupId>
-        <version>0.0.1</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>final-data-spring-boot-starter</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-data-context</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
