--- a/final-json/final-json-core/pom.xml
+++ b/final-json/final-json-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-json</artifactId>
         <groupId>org.finalframework</groupId>
-        <version>0.0.1</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
