--- a/final-ui/final-ui-admin/pom.xml
+++ b/final-ui/final-ui-admin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-ui</artifactId>
         <groupId>org.finalframework</groupId>
-        <version>0.0.1</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-ui-core</artifactId>
-            <version>0.0.1</version>
+            <version>0.2.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
