[A] add query coding

--- a/final-test/final-test-service/pom.xml
+++ b/final-test/final-test-service/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>final-test-service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-test-dao</artifactId>
+            <version>${final.version}</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
