--- a/final-test/final-test-controller/pom.xml
+++ b/final-test/final-test-controller/pom.xml
@@ -16,6 +16,11 @@
             <groupId>org.finalframework</groupId>
             <artifactId>final-spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-test-service</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
