[U] update query module

--- a/final-test/final-test-web/src/main/resources/application.yml
+++ b/final-test/final-test-web/src/main/resources/application.yml
@@ -15,3 +15,6 @@ final:
     json-service: org.finalframework.json.jackson.JacksonJsonService
   exception:
     global-exception-handler: org.finalframework.data.exception.result.ResultGlobalResultExceptionHandler
+logging:
+  level:
+    org.finalframework.test.dao.mapper: DEBUG
