--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
     <groupId>org.finalframework</groupId>
     <artifactId>final-framework</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
-    <!--<version>0.2.0-SNAPSHOT</version>-->
+    <version>0.2.2-SNAPSHOT</version>
+    <!--<version>0.2.2-SNAPSHOT</version>-->
     <modules>
         <module>final-core</module>
         <module>final-util</module>
@@ -36,7 +36,7 @@
     </parent>
 
     <properties>
-        <final.version>0.2.0-SNAPSHOT</final.version>
+        <final.version>0.2.2-SNAPSHOT</final.version>
         <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
         <!--<spring-cloud.version>Greenwich.RC2</spring-cloud.version>-->
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
@@ -54,7 +54,7 @@
         <profile>
             <id>release</id>
             <properties>
-                <final.version>0.2.0-SNAPSHOT.RELEASE</final.version>
+                <final.version>0.2.2-SNAPSHOT.RELEASE</final.version>
             </properties>
         </profile>
     </profiles>
@@ -375,9 +375,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
+                <!--                <configuration>-->
+                <!--                    <skip>true</skip>-->
+                <!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
@@ -385,18 +385,18 @@
     <!--发布 -->
     <distributionManagement>
         <!--多点仓库-->
-        <!--        <repository>-->
-        <!--            <id>dmall.com</id>-->
-        <!--            <url>http://nexus.dmall.com:8081/nexus/content/repositories/3rd</url>-->
-        <!--        </repository>-->
-        <!--        <snapshotRepository>-->
-        <!--            <id>dmall.com</id>-->
-        <!--            <url>http://nexus.dmall.com:8081/nexus/content/repositories/snapshots</url>-->
-        <!--        </snapshotRepository>-->
         <repository>
-            <id>bintray</id>
-            <url>https://api.bintray.com/maven/${bintray.user}/${bintray.repo}/${project.artifactId}/;publish=1</url>
+            <id>dmall.com</id>
+            <url>http://nexus.dmall.com:8081/nexus/content/repositories/3rd</url>
         </repository>
+        <snapshotRepository>
+            <id>dmall.com</id>
+            <url>http://nexus.dmall.com:8081/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <!--        <repository>-->
+        <!--            <id>bintray</id>-->
+        <!--            <url>https://api.bintray.com/maven/${bintray.user}/${bintray.repo}/${project.artifactId}/;publish=1</url>-->
+        <!--        </repository>-->
 
     </distributionManagement>
 
