--- a/final-test/final-test-dao/pom.xml
+++ b/final-test/final-test-dao/pom.xml
@@ -25,10 +25,12 @@
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-coding-query</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-coding-mapper</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
