--- a/final-data/final-data-context/pom.xml
+++ b/final-data/final-data-context/pom.xml
@@ -19,6 +19,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.1.3.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-core</artifactId>
         </dependency>
