--- a/final-test/final-test-web/src/main/resources/application.yml
+++ b/final-test/final-test-web/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
     username: root
     password: Aa000000
+  main:
+    allow-bean-definition-overriding: false
   thymeleaf:
     cache: false
     check-template: true
