--- a/final-test/final-test-dao/src/main/resources/final.properties
+++ b/final-test/final-test-dao/src/main/resources/final.properties
@@ -1,5 +1,5 @@
-final.data.name-converter.table-converter=org.finalframework.data.mapping.converter.CameHump2UnderlineNameConverter
-final.data.name-converter.column-converter=org.finalframework.data.mapping.converter.CameHump2UnderlineNameConverter
+final.data.name-converter.table-converter=org.finalframework.data.mapping.converter.SimpleNameConverter
+final.data.name-converter.column-converter=org.finalframework.data.mapping.converter.SimpleNameConverter
 final.mybatis.type-handler.enum-type-handler=org.finalframework.mybatis.handler.EnumTypeHandler
 final.mybatis.type-handler.list-type-handler=org.finalframework.mybatis.handler.DefaultListTypeHandler
 final.mybatis.type-handler.set-type-handler=org.finalframework.mybatis.handler.DefaultSetTypeHandler
