--- a/final-coding/final-coding-datasource/pom.xml
+++ b/final-coding/final-coding-datasource/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-coding</artifactId>
         <groupId>org.finalframework</groupId>
-        <version>0.3.4-SNAPSHOT</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -24,6 +24,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.shardingsphere/sharding-jdbc-core -->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+            <version>${sharding.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.shardingsphere/sharding-transaction-core -->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-transaction-core</artifactId>
+            <version>${sharding.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
