--- a/final-data/final-data-context/pom.xml
+++ b/final-data/final-data-context/pom.xml
@@ -50,6 +50,29 @@
             <groupId>org.finalframework</groupId>
             <artifactId>final-coding-spring</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-spring-annotation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+            <version>${sharding.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-autoconfigure</artifactId>
+            <version>2.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
