--- a/final-test/final-test-web/src/main/resources/application.yml
+++ b/final-test/final-test-web/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
-    username: root
-    password: Aa000000
+#  datasource:
+  #    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
+  #    username: root
+  #    password: Aa000000
   main:
     allow-bean-definition-overriding: false
   thymeleaf:
@@ -13,6 +13,16 @@ spring:
     host: localhost
     port: 6379
 final:
+  sharding:
+    data-sources:
+      ds0:
+        url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
+        username: root
+        password: Aa000000
+    table-rules:
+      person:
+        logic-table: person
+        actual-data-nodes: ds0.person_${0..1}
   json:
     json-service: org.finalframework.json.jackson.JacksonJsonService
   exception:
