--- a/final-test/final-test-web/src/main/resources/application.yml
+++ b/final-test/final-test-web/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
-#  datasource:
-  #    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
-  #    username: root
-  #    password: Aa000000
+  datasource:
+    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
+    username: root
+    password: Aa000000
+    driver-class-name: com.mysql.cj.jdbc.Driver
   main:
     allow-bean-definition-overriding: false
   thymeleaf:
@@ -14,15 +15,21 @@ spring:
     port: 6379
 final:
   sharding:
-    data-sources:
+    datasource:
       ds0:
-        url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
+        url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true
         username: root
         password: Aa000000
-    table-rules:
-      person:
-        logic-table: person
-        actual-data-nodes: ds0.person_${0..1}
+        driver-class-name: com.mysql.cj.jdbc.Driver
+    sharding-rule:
+      tables:
+        person:
+          logic-table: person
+          actual-data-nodes: ds0.person_${0..1}
+          table-sharding-strategy:
+            inline:
+              sharding-column: age
+              algorithm-expression: person_${age % 2}
   json:
     json-service: org.finalframework.json.jackson.JacksonJsonService
   exception:
