--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
 
+jdk:
+  - oraclejdk8
+
 before_script:
   - git push "https://${coding_user}:${coding_token}@${coding_repo}" master:master
