--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Your awesome title
-email: your-email@example.com
+email: likly@ilikly.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -28,7 +28,7 @@ git:
   url: https://github.com/likly/final-framework
   domain: Github
 final:
-  version: 0.4.0-SNAPSHOT
+  version: 0.4.1-SNAPSHOT
   entities: META-INF/final.entities
 # Build settings
 markdown: kramdown
