--- a/final-coding/final-coding-query/pom.xml
+++ b/final-coding/final-coding-query/pom.xml
@@ -16,6 +16,11 @@
             <groupId>org.finalframework</groupId>
             <artifactId>final-coding-entity</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-coding-mapper</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
