--- a/final-test/final-test-web/src/main/resources/application.yml
+++ b/final-test/final-test-web/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
     host: localhost
     port: 6379
 final:
+  spring:
+    handler-interceptors:
+      trace:
+        generator:
+
   sharding:
     datasource:
       ds0:
