--- a/final-test/final-test-web/src/main/resources/application.yml
+++ b/final-test/final-test-web/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
+    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: Aa000000
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -55,3 +55,6 @@ final:
 logging:
   level:
     org.finalframework.test.dao.mapper: DEBUG
+mybatis:
+  configuration:
+    default-enum-type-handler: org.finalframework.mybatis.handler.EnumTypeHandler
