--- a/final-test/final-test-entity/pom.xml
+++ b/final-test/final-test-entity/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>final-coding-entity</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.finalframework.mybatis</groupId>
+            <artifactId>final-mybatis-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <scope>provided</scope>
