--- a/docs/_data/sidebar/default.yml
+++ b/docs/_data/sidebar/default.yml
@@ -15,9 +15,29 @@ menus:
         mini: EM
         name: Enum
       - id: repository
-        link: /data/repository
         mini: CURD
         name: Repository
+        menus:
+          - id: index
+            name: README
+            link: /data/repository/
+            mini: RD
+          - id: create
+            name: Create
+            link: /data/repository/create
+            mini: C
+          - id: retrieve
+            name: Retrieve
+            link: /data/repository/retrieve
+            mini: R
+          - id: update
+            name: Update
+            link: /data/repository/update
+            mini: U
+          - id: delete
+            name: Delte
+            link: /data/repository/delete
+            mini: D
       - id: criterion
         link: /data/criterion
         mini: CTN
