--- a/docs/_data/modules.yml
+++ b/docs/_data/modules.yml
@@ -1,3 +1,9 @@
+- id: documents
+  link: /documents
+  logo: /assets/img/modules/json.png
+  name: Final Framework
+  subtitle: Final Framework
+  description: 站在巨人的肩膀上，视野更宽广。
 - id: framework
   link: /framework
   logo: /assets/img/modules/json.png
