[U] menus support level 4

--- a/docs/_data/sidebar/documents.yml
+++ b/docs/_data/sidebar/documents.yml
@@ -54,3 +54,11 @@ menus:
             link: /documents/data/query/criteria
             mini: CTA
             name: Criteria
+          - id: function
+            mini: FUN
+            name: Function
+            menus:
+              - id: math
+                link: /documents/data/query/function/math
+                mini: MTH
+                name: Math
