--- a/final-boot/final-mybatis-spring-boot-starter/pom.xml
+++ b/final-boot/final-mybatis-spring-boot-starter/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.finalframework.mybatis</groupId>
-            <artifactId>final-mybatis-autoconfigure</artifactId>
+            <artifactId>final-mybatis-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework.coding</groupId>
