--- a/docs/_data/sidebar/documents.yml
+++ b/docs/_data/sidebar/documents.yml
@@ -14,6 +14,10 @@ menus:
         link: /documents/data/enum
         mini: EM
         name: Enum
+      - id: result
+        link: /documents/data/result
+        mini: RST
+        name: Result
       - id: repository
         mini: CURD
         name: Repository
