--- a/final-framework/final-util/pom.xml
+++ b/final-framework/final-util/pom.xml
@@ -11,7 +11,11 @@
 
     <artifactId>final-util</artifactId>
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
