--- a/final-spring/final-spring-aop/pom.xml
+++ b/final-spring/final-spring-aop/pom.xml
@@ -13,10 +13,10 @@
 
 
     <dependencies>
-        <dependency>
-            <groupId>org.finalframework.data</groupId>
-            <artifactId>final-data-context</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.finalframework.data</groupId>-->
+        <!--            <artifactId>final-data-context</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
